@@ -16,14 +16,14 @@ char *hpd_up =
         "\n Directory log:\n"
         "  -r [-u] [--full] [-xdev] [--maxdepth=<limit>] [--mindepth=<limit>] [filter options] ..\n"
         "                        Rebuild dirlog based on filesystem data\n"
-        "                           .folders file (see MANUAL) defines a list of dirs in SITEROOT to scan\n"
-        "                           -u - only import new records, do not truncate existing dirlog\n"
-        "                           --full - ignore .folders file and do a full recursive scan\n"
-        "                           --indepth - scans each imported directory recursivelly\n"
-        "                           --nonukechk - disable checking dir nuke status in nukelog\n"
+        "                          .folders file (see MANUAL) defines a list of dirs in SITEROOT to scan\n"
+        "                          -u - only import new records, do not truncate existing dirlog\n"
+        "                          --full - ignore .folders file and do a full recursive scan\n"
+        "                          --indepth - scans each imported directory recursivelly\n"
+        "                          --nonukechk - disable checking dir nuke status in nukelog\n"
         "  -s <folders>          Import specific directories. Use quotation marks with multiple arguments\n"
-        "                           <folders> are passed relative to SITEROOT, separated by space\n"
-        "                           Use -f to overwrite existing entries\n"
+        "                          <folders> are passed relative to SITEROOT, separated by space\n"
+        "                          Use -f to overwrite existing entries\n"
         "  -c, --check [--fix] [--ghost]\n"
         "                        Compare dirlog and filesystem records and warn on differences\n"
         "                          --fix attempts to correct dirlog/filesystem\n"
@@ -34,9 +34,9 @@ char *hpd_up =
         "  -d, [--raw] [--batch] [--export|-E] [-print] [ --r[u]sleep] [--stats] [--sort] ..\n"
         "                        Read directory log and print to stdout (text/binary)\n"
         "                          (-vv prints dir nuke status from nukelog)\n"
-        "                         --batch         Prints with simple formatting\n"
-        "                         --export, -E    Prints in glutil export text format\n"
-        "                         --raw           Prints raw binary data to stdout\n"
+        "                          --batch         Prints with simple formatting\n"
+        "                          --export, -E    Prints in glutil export text format\n"
+        "                          --raw           Prints raw binary data to stdout\n"
         "  -n, -||-              Read nuke log\n"
         "  -i, -||-              Read dupe file\n"
         "  -l, -||-              Read last-on log\n"
@@ -77,9 +77,9 @@ char *hpd_up =
         "                          --raw writes binary result to stdout\n"
         "\n Macro:\n"
         "  -m <macro> [--arg[1-3] <string>]\n"
-        "                         Search subdirs for an executable containing the given macro defined, and execute it\n"
-        "                           --arg[1-3] sets values that fill {m:arg[1-3]} variables inside a macro\n"
-        "  -mlist                 Display any available macro, with description (if present)\n"
+        "                        Search subdirs for an executable containing the given macro defined, and execute it\n"
+        "                          --arg[1-3] sets values that fill {m:arg[1-3]} variables inside a macro\n"
+        "  -mlist                Display any available macro, with description (if present)\n"
         "\n Filter options:\n"
         "  --regex [<field>,]<match>\n"
         "                        Regex filter string, used during various operations\n"
@@ -145,8 +145,9 @@ char *hpd_up =
         "                            defaults to ascending\n"
         "                          Sorts by the specified data log <field>\n"
         "                          Used with -e, -d, -i, -l, -o, -w, -a, -k, -h, -n, -q, -z\n"
-        "  --sortmethod <heap|qsort|insert|swap>\n"
-        "                        Select a sorting method (heapsort, quicksort, insertion sort, swapsort)\n"
+        "  --sortmethod <heap|qsort|insert|select|swap>\n"
+        "                        Select a sorting method (heapsort, quicksort, insertion sort, selection sort,\n"
+        "                          swapsort(bubblesort))\n"
         "                          Defaults to quicksort\n"
         "\n"
         "Options:\n"
@@ -161,26 +162,26 @@ char *hpd_up =
         "  --memlimit=<bytes>    Maximum file size that can be pre-buffered into memory\n"
         "  --memlimita=<bytes>   Maximum ASCII input data file size (ignored)\n"
         "  --shmem [--shmdestroy] [--shmdestonexit] [--shmreload]\n"
-        "                        Instead of process memory pages, use the shared memory to buffer log data\n"
-        "                           This is usefull as an inter-process caching mechanism, allowing other glutil\n"
-        "                            instances (or other processes) rapid access to the log data, without having to\n"
-        "                            allocate pages and load from filesystem each time\n"
-        "                           If log file is present and it's size doesn't match segment size, glutil\n"
-        "                            destroys the segment and re-creates it with new size\n"
-        "                           Although this applies globally, it should only be used with dump operations (-d,-n,-i,..)\n"
-        "                           DO NOT use, unless you know exactly what you are doing\n"
+        "                          Instead of process memory pages, use the shared memory to buffer log data.\n"
+        "                          This is usefull as an inter-process caching mechanism, allowing other glutil\n"
+        "                           instances (or other processes) rapid access to the log data, without having to\n"
+        "                           allocate pages and load from filesystem each time\n"
+        "                          If log file is present and it's size doesn't match segment size, glutil\n"
+        "                           destroys the segment and re-creates it with new size\n"
+        "                          Although this applies globally, it should only be used with dump operations (-d,-n,-i,..)\n"
+        "                          DO NOT use, unless you know exactly what you are doing\n"
         "                          --shmdestroy forces the old segment (if any) be destroyed and re-loaded\n"
         "                          --shmdestonexit destroys used segments before exiting process\n"
         "                          --shmreload forces existing records (if any) be reloaded, but segment is not destroyed\n"
         "                           and it's size remains the same (when data log size doesn't match segment size,\n"
         "                           there will be junk/missing records, depending on input size being higher/lower)\n"
         "  --gz <0-9>            Enable gzip compression when writing data. Applies to any data write operation\n"
-        "                           (including writing raw data to stdout), except to dirlog rebuild mode (-r)\n"
-        "                           0-9 integers determine the compression level;\n"
-        "                           Zero (0) = no compression, nine (9) best compression\n"
+        "                          (including writing raw data to stdout), except to dirlog rebuild mode (-r)\n"
+        "                          0-9 integers determine the compression level;\n"
+        "                          Zero (0) = no compression, nine (9) best compression\n"
         "  --loadq               Quit after loading data into memory\n"
         "  --loadqa              Quit after filtering/sorting\n"
-        "                           Applies to dump operations only\n"
+        "                          Applies to dump operations only\n"
         "  --nofq                Abort data (re)build operation unconditionally, if nothing was filtered\n"
         "  --noglconf            Disable reading settings from glftpd.conf\n"
         "  --nobackup            Disable log backup before rebuilding\n"
