@@ -190,8 +190,9 @@ typedef unsigned long long int ulint64_t;
 #define F_OPT_LOADQA                    (a64 << 17)
 #define F_OPT_SMETHOD_Q                 (a64 << 18)
 #define F_OPT_SMETHOD_INSSORT           (a64 << 19)
+#define F_OPT_SMETHOD_SELECT            (a64 << 20)
 
-#define F_OPT_SMETHOD                   (F_OPT_SMETHOD_SWAP|F_OPT_SMETHOD_HEAP|F_OPT_SMETHOD_Q|F_OPT_SMETHOD_INSSORT)
+#define F_OPT_SMETHOD                   (F_OPT_SMETHOD_SWAP|F_OPT_SMETHOD_HEAP|F_OPT_SMETHOD_Q|F_OPT_SMETHOD_INSSORT|F_OPT_SMETHOD_SELECT)
 
 #define F_DL_FOPEN_BUFFER               (a32 << 1)
 #define F_DL_FOPEN_FILE                 (a32 << 2)
