@@ -31,7 +31,8 @@
  *   - % Changed some altlog properties, update filelog scripts and rebuild filelog if using it (rev. 5)
  *   - % Made --sort ..,<order> parameter optional (rev. 6_b1)
  *   - + Implemented insertion sort (rev. 6_b2)
- *   - % Made quicksort the default sorting algorithm (rev. 6_b3) 
+ *   - % Made quicksort the default sorting algorithm (rev. 6_b3)
+ *   - + Implemented selection sort (rev. 6_b4)
  *
  * v2.3:
  *
